--- a/kukumav-imza.htm
+++ b/kukumav-imza.htm
@@ -29,7 +29,7 @@ https://www.kukumav.net/blog/html-mail-imzasi-olusturma/
 	
 	 <tr>
       <td class="hover" height="30" style="font-family:Helvetica, Arial, sans-serif; font-size:16px; color:#e0070c;"><strong style="color:#000">Email:</strong>
-        <a href="mailto:info@ozelmetal.com.tr" onMouseOver="this.style.color='#ff9800'" onMouseOut="this.style.color='#e0070c'" style="color:#e0070c; ">enisozturk[@]kukumav.net</a>
+        <a href="mailto:info@ozelmetal.com.tr" onMouseOver="this.style.color='#ff9800'" onMouseOut="this.style.color='#e0070c'" style="color:#e0070c; ">info@ozelmetal.com.tr</a>
       </td>
     </tr>
 	
